--- a/iBiblia.lpi
+++ b/iBiblia.lpi
@@ -24,7 +24,7 @@
       <Language Value="0416"/>
       <StringTable CompanyName="Rúbio R. C. Terra (rubio.terra@gmail.com)" FileDescription="Ferramenta para associação de textos bíblicos" ProductName="iBiblia" ProductVersion="0.0.0.0"/>
     </VersionInfo>
-    <BuildModes Count="4" Active="Release32">
+    <BuildModes Count="4" Active="Debug32">
       <Item1 Name="Debug" Default="True"/>
       <Item2 Name="Release">
         <CompilerOptions>
@@ -144,7 +144,7 @@
         <Filename Value="iBiblia.lpr"/>
         <IsPartOfProject Value="True"/>
         <WindowIndex Value="1"/>
-        <CursorPos Y="26"/>
+        <CursorPos Y="18"/>
         <UsageCount Value="207"/>
         <Loaded Value="True"/>
       </Unit0>
@@ -196,8 +196,8 @@
         <IsVisibleTab Value="True"/>
         <EditorIndex Value="5"/>
         <WindowIndex Value="1"/>
-        <TopLine Value="1675"/>
-        <CursorPos Y="1688"/>
+        <TopLine Value="1918"/>
+        <CursorPos Y="1939"/>
         <ExtraEditorCount Value="1"/>
         <ExtraEditor1>
           <EditorIndex Value="-1"/>
@@ -307,7 +307,8 @@
         <ResourceBaseClass Value="Form"/>
         <EditorIndex Value="18"/>
         <WindowIndex Value="1"/>
-        <TopLine Value="45"/>
+        <TopLine Value="92"/>
+        <CursorPos Y="118"/>
         <UsageCount Value="203"/>
         <Loaded Value="True"/>
         <LoadedDesigner Value="True"/>
@@ -353,7 +354,8 @@
         <IsPartOfProject Value="True"/>
         <EditorIndex Value="3"/>
         <WindowIndex Value="1"/>
-        <CursorPos X="23" Y="117"/>
+        <TopLine Value="150"/>
+        <CursorPos X="50" Y="179"/>
         <UsageCount Value="232"/>
         <Loaded Value="True"/>
       </Unit17>
@@ -429,123 +431,123 @@
     <JumpHistory Count="30" HistoryIndex="29">
       <Position1>
         <Filename Value="projeto.pas"/>
-        <Caret Line="1791" TopLine="1778"/>
+        <Caret Line="155" Column="15" TopLine="145"/>
       </Position1>
       <Position2>
         <Filename Value="projeto.pas"/>
-        <Caret Line="1792" TopLine="1778"/>
+        <Caret Line="1785" Column="51" TopLine="1782"/>
       </Position2>
       <Position3>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="1793" TopLine="1778"/>
+        <Filename Value="formexportar.pas"/>
+        <Caret Line="118" TopLine="92"/>
       </Position3>
       <Position4>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="1795" TopLine="1778"/>
+        <Filename Value="twAutomate.pas"/>
+        <Caret Line="179" Column="50" TopLine="150"/>
       </Position4>
       <Position5>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="1796" TopLine="1778"/>
+        <Filename Value="formexportar.pas"/>
+        <Caret Line="118" TopLine="92"/>
       </Position5>
       <Position6>
         <Filename Value="projeto.pas"/>
-        <Caret Line="1785" TopLine="1786"/>
+        <Caret Line="1847" TopLine="1828"/>
       </Position6>
       <Position7>
         <Filename Value="projeto.pas"/>
-        <Caret Line="1791" Column="16" TopLine="1778"/>
+        <Caret Line="1848" TopLine="1828"/>
       </Position7>
       <Position8>
         <Filename Value="projeto.pas"/>
-        <Caret Line="1785" TopLine="1781"/>
+        <Caret Line="1851" TopLine="1828"/>
       </Position8>
       <Position9>
         <Filename Value="projeto.pas"/>
-        <Caret Line="1688" TopLine="1675"/>
+        <Caret Line="1852" TopLine="1828"/>
       </Position9>
       <Position10>
         <Filename Value="projeto.pas"/>
-        <Caret Line="1785" TopLine="1773"/>
+        <Caret Line="1854" TopLine="1828"/>
       </Position10>
       <Position11>
         <Filename Value="projeto.pas"/>
-        <Caret Line="1791" TopLine="1773"/>
+        <Caret Line="1855" TopLine="1828"/>
       </Position11>
       <Position12>
         <Filename Value="projeto.pas"/>
-        <Caret Line="670" TopLine="657"/>
+        <Caret Line="1856" TopLine="1828"/>
       </Position12>
       <Position13>
         <Filename Value="projeto.pas"/>
-        <Caret Line="668" Column="44" TopLine="657"/>
+        <Caret Line="1857" TopLine="1828"/>
       </Position13>
       <Position14>
         <Filename Value="projeto.pas"/>
-        <Caret Line="672" TopLine="657"/>
+        <Caret Line="1858" TopLine="1828"/>
       </Position14>
       <Position15>
         <Filename Value="projeto.pas"/>
-        <Caret Line="673" Column="56" TopLine="657"/>
+        <Caret Line="1860" TopLine="1828"/>
       </Position15>
       <Position16>
         <Filename Value="projeto.pas"/>
-        <Caret Line="674" TopLine="657"/>
+        <Caret Line="1861" TopLine="1837"/>
       </Position16>
       <Position17>
         <Filename Value="projeto.pas"/>
-        <Caret Line="1792" TopLine="1780"/>
+        <Caret Line="1862" TopLine="1837"/>
       </Position17>
       <Position18>
         <Filename Value="projeto.pas"/>
-        <Caret Line="1529" TopLine="1516"/>
+        <Caret Line="1863" TopLine="1837"/>
       </Position18>
       <Position19>
         <Filename Value="projeto.pas"/>
-        <Caret Line="1530" TopLine="1516"/>
+        <Caret Line="1940" Column="63" TopLine="1918"/>
       </Position19>
       <Position20>
         <Filename Value="projeto.pas"/>
-        <Caret Line="1531" TopLine="1516"/>
+        <Caret Line="1945" TopLine="1919"/>
       </Position20>
       <Position21>
         <Filename Value="projeto.pas"/>
-        <Caret Line="1533" TopLine="1516"/>
+        <Caret Line="275" Column="76" TopLine="256"/>
       </Position21>
       <Position22>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="1793" TopLine="1781"/>
+        <Filename Value="formexportar.pas"/>
+        <Caret Line="118" TopLine="92"/>
       </Position22>
       <Position23>
         <Filename Value="projeto.pas"/>
-        <Caret Line="1795" TopLine="1781"/>
+        <Caret Line="1943" Column="63" TopLine="1923"/>
       </Position23>
       <Position24>
         <Filename Value="projeto.pas"/>
-        <Caret Line="1796" TopLine="1781"/>
+        <Caret Line="276" TopLine="255"/>
       </Position24>
       <Position25>
         <Filename Value="projeto.pas"/>
-        <Caret Line="1785" TopLine="1780"/>
+        <Caret Line="2311" Column="5" TopLine="2261"/>
       </Position25>
       <Position26>
         <Filename Value="projeto.pas"/>
-        <Caret Line="1788" TopLine="1780"/>
+        <Caret Line="274" Column="21" TopLine="255"/>
       </Position26>
       <Position27>
         <Filename Value="projeto.pas"/>
-        <Caret Line="1791" TopLine="1780"/>
+        <Caret Line="1939" Column="16" TopLine="1911"/>
       </Position27>
       <Position28>
         <Filename Value="projeto.pas"/>
-        <Caret Line="670" TopLine="657"/>
+        <Caret Line="160" Column="15" TopLine="143"/>
       </Position28>
       <Position29>
         <Filename Value="projeto.pas"/>
-        <Caret Line="155" Column="15" TopLine="145"/>
+        <Caret Line="2034" TopLine="2006"/>
       </Position29>
       <Position30>
         <Filename Value="projeto.pas"/>
-        <Caret Line="1785" Column="51" TopLine="1782"/>
+        <Caret Line="158" Column="15" TopLine="142"/>
       </Position30>
     </JumpHistory>
   </ProjectOptions>
@@ -588,7 +590,7 @@
         <WatchScope Value="wpsLocal"/>
         <WatchKind Value="wpkWrite"/>
         <Source Value="projeto.pas"/>
-        <Line Value="888"/>
+        <Line Value="890"/>
       </Item2>
       <Item3>
         <Kind Value="bpkSource"/>
@@ -601,8 +603,8 @@
         <Kind Value="bpkSource"/>
         <WatchScope Value="wpsLocal"/>
         <WatchKind Value="wpkWrite"/>
-        <Source Value="projeto.pas"/>
-        <Line Value="1688"/>
+        <Source Value="formexportar.pas"/>
+        <Line Value="118"/>
       </Item4>
     </BreakPoints>
     <Watches Count="1">
