--- a/iBiblia.lpi
+++ b/iBiblia.lpi
@@ -139,7 +139,7 @@
         <PackageName Value="LCL"/>
       </Item2>
     </RequiredPackages>
-    <Units Count="25">
+    <Units Count="26">
       <Unit0>
         <Filename Value="iBiblia.lpr"/>
         <IsPartOfProject Value="True"/>
@@ -157,8 +157,8 @@
         <UnitName Value="formPrincipal"/>
         <EditorIndex Value="2"/>
         <WindowIndex Value="1"/>
-        <TopLine Value="686"/>
-        <CursorPos X="21" Y="688"/>
+        <TopLine Value="790"/>
+        <CursorPos X="70" Y="801"/>
         <UsageCount Value="207"/>
         <Loaded Value="True"/>
         <LoadedDesigner Value="True"/>
@@ -167,7 +167,7 @@
         <Filename Value="versiculo.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="Versiculo"/>
-        <EditorIndex Value="8"/>
+        <EditorIndex Value="10"/>
         <WindowIndex Value="1"/>
         <TopLine Value="387"/>
         <CursorPos Y="399"/>
@@ -187,7 +187,7 @@
         <EditorIndex Value="-1"/>
         <WindowIndex Value="1"/>
         <CursorPos X="18"/>
-        <UsageCount Value="141"/>
+        <UsageCount Value="137"/>
       </Unit3>
       <Unit4>
         <Filename Value="projeto.pas"/>
@@ -196,8 +196,8 @@
         <IsVisibleTab Value="True"/>
         <EditorIndex Value="5"/>
         <WindowIndex Value="1"/>
-        <TopLine Value="1918"/>
-        <CursorPos Y="1939"/>
+        <TopLine Value="2133"/>
+        <CursorPos Y="2075"/>
         <ExtraEditorCount Value="1"/>
         <ExtraEditor1>
           <EditorIndex Value="-1"/>
@@ -210,7 +210,7 @@
         <Filename Value="sugestao.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="Sugestao"/>
-        <EditorIndex Value="13"/>
+        <EditorIndex Value="15"/>
         <WindowIndex Value="1"/>
         <TopLine Value="598"/>
         <CursorPos Y="398"/>
@@ -223,7 +223,7 @@
         <ComponentName Value="FormNovoProjeto"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
-        <EditorIndex Value="11"/>
+        <EditorIndex Value="13"/>
         <WindowIndex Value="1"/>
         <TopLine Value="28"/>
         <CursorPos X="90" Y="49"/>
@@ -237,7 +237,7 @@
         <ComponentName Value="frmDictionaryPopup"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
-        <EditorIndex Value="10"/>
+        <EditorIndex Value="12"/>
         <WindowIndex Value="1"/>
         <TopLine Value="127"/>
         <CursorPos Y="165"/>
@@ -249,7 +249,7 @@
         <Filename Value="rtfedit.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="RTFEdit"/>
-        <EditorIndex Value="16"/>
+        <EditorIndex Value="18"/>
         <WindowIndex Value="1"/>
         <TopLine Value="210"/>
         <CursorPos Y="139"/>
@@ -262,7 +262,7 @@
         <ComponentName Value="FormPropProjeto"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
-        <EditorIndex Value="15"/>
+        <EditorIndex Value="17"/>
         <WindowIndex Value="1"/>
         <TopLine Value="151"/>
         <CursorPos X="45" Y="166"/>
@@ -274,7 +274,7 @@
         <Filename Value="memoversiculo.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="MemoVersiculo"/>
-        <EditorIndex Value="14"/>
+        <EditorIndex Value="16"/>
         <WindowIndex Value="1"/>
         <TopLine Value="39"/>
         <CursorPos Y="53"/>
@@ -287,7 +287,7 @@
         <WindowIndex Value="1"/>
         <TopLine Value="25"/>
         <CursorPos X="51" Y="45"/>
-        <UsageCount Value="14"/>
+        <UsageCount Value="10"/>
       </Unit11>
       <Unit12>
         <Filename Value="PCRE.pas"/>
@@ -305,10 +305,10 @@
         <ComponentName Value="frmExportarProjeto"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
-        <EditorIndex Value="18"/>
+        <EditorIndex Value="7"/>
         <WindowIndex Value="1"/>
-        <TopLine Value="92"/>
-        <CursorPos Y="118"/>
+        <TopLine Value="166"/>
+        <CursorPos Y="193"/>
         <UsageCount Value="203"/>
         <Loaded Value="True"/>
         <LoadedDesigner Value="True"/>
@@ -317,7 +317,7 @@
         <Filename Value="exportarprojeto.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="ExportarProjeto"/>
-        <EditorIndex Value="12"/>
+        <EditorIndex Value="14"/>
         <WindowIndex Value="1"/>
         <TopLine Value="362"/>
         <CursorPos X="29" Y="284"/>
@@ -330,7 +330,7 @@
         <ComponentName Value="FrmMesclarProjetos"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
-        <EditorIndex Value="19"/>
+        <EditorIndex Value="20"/>
         <WindowIndex Value="1"/>
         <CursorPos X="21" Y="30"/>
         <UsageCount Value="213"/>
@@ -343,7 +343,7 @@
         <ComponentName Value="FrmEscolherVerseRules"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
-        <EditorIndex Value="17"/>
+        <EditorIndex Value="19"/>
         <WindowIndex Value="1"/>
         <CursorPos X="42" Y="9"/>
         <UsageCount Value="228"/>
@@ -377,13 +377,13 @@
         <WindowIndex Value="1"/>
         <TopLine Value="93"/>
         <CursorPos X="23" Y="122"/>
-        <UsageCount Value="54"/>
+        <UsageCount Value="50"/>
       </Unit19>
       <Unit20>
         <Filename Value="onttokenizer.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="ONTTokenizer"/>
-        <EditorIndex Value="6"/>
+        <EditorIndex Value="8"/>
         <WindowIndex Value="1"/>
         <CursorPos X="3" Y="50"/>
         <UsageCount Value="202"/>
@@ -393,7 +393,7 @@
         <Filename Value="ontparser.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="ONTParser"/>
-        <EditorIndex Value="7"/>
+        <EditorIndex Value="9"/>
         <WindowIndex Value="1"/>
         <TopLine Value="275"/>
         <CursorPos Y="291"/>
@@ -404,7 +404,7 @@
         <Filename Value="sintagma.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="Sintagma"/>
-        <EditorIndex Value="9"/>
+        <EditorIndex Value="11"/>
         <WindowIndex Value="1"/>
         <TopLine Value="696"/>
         <CursorPos Y="709"/>
@@ -418,136 +418,145 @@
         <WindowIndex Value="1"/>
         <TopLine Value="383"/>
         <CursorPos X="3" Y="396"/>
-        <UsageCount Value="7"/>
+        <UsageCount Value="3"/>
       </Unit23>
       <Unit24>
         <Filename Value="C:\Users\rubio\AppData\Local\Temp\Rar$DIa0.812\frm1.pas"/>
         <EditorIndex Value="-1"/>
         <WindowIndex Value="1"/>
         <TopLine Value="81"/>
-        <UsageCount Value="11"/>
+        <UsageCount Value="7"/>
       </Unit24>
+      <Unit25>
+        <Filename Value="C:\tools\lazarus\fpc\3.0.4\source\packages\fcl-db\src\base\dataset.inc"/>
+        <EditorIndex Value="6"/>
+        <WindowIndex Value="1"/>
+        <TopLine Value="1886"/>
+        <CursorPos X="3" Y="1889"/>
+        <UsageCount Value="11"/>
+        <Loaded Value="True"/>
+      </Unit25>
     </Units>
-    <JumpHistory Count="30" HistoryIndex="29">
+    <JumpHistory Count="30" HistoryIndex="27">
       <Position1>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="155" Column="15" TopLine="145"/>
+        <Filename Value="formprincipal.pas"/>
+        <Caret Line="689" Column="21" TopLine="687"/>
       </Position1>
       <Position2>
         <Filename Value="projeto.pas"/>
-        <Caret Line="1785" Column="51" TopLine="1782"/>
+        <Caret Line="275" TopLine="255"/>
       </Position2>
       <Position3>
-        <Filename Value="formexportar.pas"/>
-        <Caret Line="118" TopLine="92"/>
+        <Filename Value="projeto.pas"/>
+        <Caret Line="162" Column="15" TopLine="145"/>
       </Position3>
       <Position4>
-        <Filename Value="twAutomate.pas"/>
-        <Caret Line="179" Column="50" TopLine="150"/>
+        <Filename Value="projeto.pas"/>
+        <Caret Line="2027" Column="40" TopLine="2025"/>
       </Position4>
       <Position5>
-        <Filename Value="formexportar.pas"/>
-        <Caret Line="118" TopLine="92"/>
+        <Filename Value="projeto.pas"/>
+        <Caret Line="2022" Column="50" TopLine="2020"/>
       </Position5>
       <Position6>
         <Filename Value="projeto.pas"/>
-        <Caret Line="1847" TopLine="1828"/>
+        <Caret Line="2024" Column="58" TopLine="2017"/>
       </Position6>
       <Position7>
         <Filename Value="projeto.pas"/>
-        <Caret Line="1848" TopLine="1828"/>
+        <Caret Line="2027" Column="40" TopLine="2017"/>
       </Position7>
       <Position8>
         <Filename Value="projeto.pas"/>
-        <Caret Line="1851" TopLine="1828"/>
+        <Caret Line="2047" Column="35" TopLine="2027"/>
       </Position8>
       <Position9>
         <Filename Value="projeto.pas"/>
-        <Caret Line="1852" TopLine="1828"/>
+        <Caret Line="562" Column="30" TopLine="543"/>
       </Position9>
       <Position10>
         <Filename Value="projeto.pas"/>
-        <Caret Line="1854" TopLine="1828"/>
+        <Caret Line="567" Column="111" TopLine="543"/>
       </Position10>
       <Position11>
         <Filename Value="projeto.pas"/>
-        <Caret Line="1855" TopLine="1828"/>
+        <Caret Line="573" Column="32" TopLine="569"/>
       </Position11>
       <Position12>
         <Filename Value="projeto.pas"/>
-        <Caret Line="1856" TopLine="1828"/>
+        <Caret Line="169" Column="15" TopLine="152"/>
       </Position12>
       <Position13>
         <Filename Value="projeto.pas"/>
-        <Caret Line="1857" TopLine="1828"/>
+        <Caret Line="110" Column="37" TopLine="90"/>
       </Position13>
       <Position14>
         <Filename Value="projeto.pas"/>
-        <Caret Line="1858" TopLine="1828"/>
+        <Caret Line="536" Column="36" TopLine="527"/>
       </Position14>
       <Position15>
         <Filename Value="projeto.pas"/>
-        <Caret Line="1860" TopLine="1828"/>
+        <Caret Line="1419" TopLine="1393"/>
       </Position15>
       <Position16>
         <Filename Value="projeto.pas"/>
-        <Caret Line="1861" TopLine="1837"/>
+        <Caret Line="162" Column="23" TopLine="145"/>
       </Position16>
       <Position17>
         <Filename Value="projeto.pas"/>
-        <Caret Line="1862" TopLine="1837"/>
+        <Caret Line="1968" Column="3" TopLine="1962"/>
       </Position17>
       <Position18>
         <Filename Value="projeto.pas"/>
-        <Caret Line="1863" TopLine="1837"/>
+        <Caret Line="163" Column="23" TopLine="145"/>
       </Position18>
       <Position19>
         <Filename Value="projeto.pas"/>
-        <Caret Line="1940" Column="63" TopLine="1918"/>
+        <Caret Line="2068" Column="3" TopLine="2057"/>
       </Position19>
       <Position20>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="1945" TopLine="1919"/>
+        <Filename Value="formexportar.pas"/>
+        <Caret Line="179" TopLine="149"/>
       </Position20>
       <Position21>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="275" Column="76" TopLine="256"/>
+        <Filename Value="formexportar.pas"/>
+        <Caret Line="36" Column="15" TopLine="18"/>
       </Position21>
       <Position22>
         <Filename Value="formexportar.pas"/>
-        <Caret Line="118" TopLine="92"/>
+        <Caret Line="95" TopLine="74"/>
       </Position22>
       <Position23>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="1943" Column="63" TopLine="1923"/>
+        <Filename Value="formexportar.pas"/>
+        <Caret Line="36" Column="15" TopLine="18"/>
       </Position23>
       <Position24>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="276" TopLine="255"/>
+        <Filename Value="formexportar.pas"/>
+        <Caret Line="74" Column="15" TopLine="69"/>
       </Position24>
       <Position25>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="2311" Column="5" TopLine="2261"/>
+        <Filename Value="formexportar.pas"/>
+        <Caret Line="193" TopLine="166"/>
       </Position25>
       <Position26>
         <Filename Value="projeto.pas"/>
-        <Caret Line="274" Column="21" TopLine="255"/>
+        <Caret Line="2237" Column="3" TopLine="2235"/>
       </Position26>
       <Position27>
         <Filename Value="projeto.pas"/>
-        <Caret Line="1939" Column="16" TopLine="1911"/>
+        <Caret Line="606" TopLine="601"/>
       </Position27>
       <Position28>
         <Filename Value="projeto.pas"/>
-        <Caret Line="160" Column="15" TopLine="143"/>
+        <Caret Line="2071" Column="166" TopLine="2053"/>
       </Position28>
       <Position29>
         <Filename Value="projeto.pas"/>
-        <Caret Line="2034" TopLine="2006"/>
+        <Caret Line="267" TopLine="247"/>
       </Position29>
       <Position30>
         <Filename Value="projeto.pas"/>
-        <Caret Line="158" Column="15" TopLine="142"/>
+        <Caret Line="2074" Column="62" TopLine="2056"/>
       </Position30>
     </JumpHistory>
   </ProjectOptions>
@@ -590,7 +599,7 @@
         <WatchScope Value="wpsLocal"/>
         <WatchKind Value="wpkWrite"/>
         <Source Value="projeto.pas"/>
-        <Line Value="890"/>
+        <Line Value="906"/>
       </Item2>
       <Item3>
         <Kind Value="bpkSource"/>
