--- a/iBiblia.lpi
+++ b/iBiblia.lpi
@@ -139,7 +139,7 @@
         <PackageName Value="LCL"/>
       </Item2>
     </RequiredPackages>
-    <Units Count="26">
+    <Units Count="28">
       <Unit0>
         <Filename Value="iBiblia.lpr"/>
         <IsPartOfProject Value="True"/>
@@ -157,8 +157,8 @@
         <UnitName Value="formPrincipal"/>
         <EditorIndex Value="2"/>
         <WindowIndex Value="1"/>
-        <TopLine Value="790"/>
-        <CursorPos X="70" Y="801"/>
+        <TopLine Value="337"/>
+        <CursorPos Y="356"/>
         <UsageCount Value="207"/>
         <Loaded Value="True"/>
         <LoadedDesigner Value="True"/>
@@ -187,17 +187,17 @@
         <EditorIndex Value="-1"/>
         <WindowIndex Value="1"/>
         <CursorPos X="18"/>
-        <UsageCount Value="137"/>
+        <UsageCount Value="133"/>
       </Unit3>
       <Unit4>
         <Filename Value="projeto.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="Projeto"/>
         <IsVisibleTab Value="True"/>
-        <EditorIndex Value="5"/>
+        <EditorIndex Value="6"/>
         <WindowIndex Value="1"/>
-        <TopLine Value="2133"/>
-        <CursorPos Y="2075"/>
+        <TopLine Value="1225"/>
+        <CursorPos X="39" Y="1232"/>
         <ExtraEditorCount Value="1"/>
         <ExtraEditor1>
           <EditorIndex Value="-1"/>
@@ -225,8 +225,8 @@
         <ResourceBaseClass Value="Form"/>
         <EditorIndex Value="13"/>
         <WindowIndex Value="1"/>
-        <TopLine Value="28"/>
-        <CursorPos X="90" Y="49"/>
+        <TopLine Value="82"/>
+        <CursorPos X="13" Y="84"/>
         <UsageCount Value="205"/>
         <Loaded Value="True"/>
         <LoadedDesigner Value="True"/>
@@ -264,8 +264,8 @@
         <ResourceBaseClass Value="Form"/>
         <EditorIndex Value="17"/>
         <WindowIndex Value="1"/>
-        <TopLine Value="151"/>
-        <CursorPos X="45" Y="166"/>
+        <TopLine Value="49"/>
+        <CursorPos Y="59"/>
         <UsageCount Value="204"/>
         <Loaded Value="True"/>
         <LoadedDesigner Value="True"/>
@@ -287,7 +287,7 @@
         <WindowIndex Value="1"/>
         <TopLine Value="25"/>
         <CursorPos X="51" Y="45"/>
-        <UsageCount Value="10"/>
+        <UsageCount Value="6"/>
       </Unit11>
       <Unit12>
         <Filename Value="PCRE.pas"/>
@@ -307,8 +307,8 @@
         <ResourceBaseClass Value="Form"/>
         <EditorIndex Value="7"/>
         <WindowIndex Value="1"/>
-        <TopLine Value="166"/>
-        <CursorPos Y="193"/>
+        <TopLine Value="49"/>
+        <CursorPos Y="64"/>
         <UsageCount Value="203"/>
         <Loaded Value="True"/>
         <LoadedDesigner Value="True"/>
@@ -352,7 +352,7 @@
       <Unit17>
         <Filename Value="twAutomate.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="3"/>
+        <EditorIndex Value="4"/>
         <WindowIndex Value="1"/>
         <TopLine Value="150"/>
         <CursorPos X="50" Y="179"/>
@@ -363,7 +363,7 @@
         <Filename Value="twsyncthread.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="twSyncThread"/>
-        <EditorIndex Value="4"/>
+        <EditorIndex Value="5"/>
         <WindowIndex Value="1"/>
         <TopLine Value="19"/>
         <CursorPos Y="44"/>
@@ -377,7 +377,7 @@
         <WindowIndex Value="1"/>
         <TopLine Value="93"/>
         <CursorPos X="23" Y="122"/>
-        <UsageCount Value="50"/>
+        <UsageCount Value="46"/>
       </Unit19>
       <Unit20>
         <Filename Value="onttokenizer.pas"/>
@@ -412,151 +412,168 @@
         <Loaded Value="True"/>
       </Unit22>
       <Unit23>
-        <Filename Value="C:\tools\lazarus\lcl\menus.pp"/>
-        <UnitName Value="Menus"/>
-        <EditorIndex Value="-1"/>
-        <WindowIndex Value="1"/>
-        <TopLine Value="383"/>
-        <CursorPos X="3" Y="396"/>
-        <UsageCount Value="3"/>
-      </Unit23>
-      <Unit24>
         <Filename Value="C:\Users\rubio\AppData\Local\Temp\Rar$DIa0.812\frm1.pas"/>
         <EditorIndex Value="-1"/>
         <WindowIndex Value="1"/>
         <TopLine Value="81"/>
-        <UsageCount Value="7"/>
-      </Unit24>
-      <Unit25>
+        <UsageCount Value="3"/>
+      </Unit23>
+      <Unit24>
         <Filename Value="C:\tools\lazarus\fpc\3.0.4\source\packages\fcl-db\src\base\dataset.inc"/>
-        <EditorIndex Value="6"/>
+        <EditorIndex Value="-1"/>
         <WindowIndex Value="1"/>
         <TopLine Value="1886"/>
         <CursorPos X="3" Y="1889"/>
-        <UsageCount Value="11"/>
-        <Loaded Value="True"/>
+        <UsageCount Value="6"/>
+      </Unit24>
+      <Unit25>
+        <Filename Value="C:\tools\lazarus\lcl\lcltranslator.pas"/>
+        <UnitName Value="LCLTranslator"/>
+        <EditorIndex Value="-1"/>
+        <WindowIndex Value="1"/>
+        <TopLine Value="549"/>
+        <CursorPos X="69" Y="504"/>
+        <UsageCount Value="24"/>
       </Unit25>
+      <Unit26>
+        <Filename Value="C:\tools\lazarus\lcl\include\treeview.inc"/>
+        <EditorIndex Value="3"/>
+        <WindowIndex Value="1"/>
+        <TopLine Value="1903"/>
+        <CursorPos Y="1922"/>
+        <UsageCount Value="10"/>
+        <Loaded Value="True"/>
+      </Unit26>
+      <Unit27>
+        <Filename Value="C:\tools\lazarus\lcl\comctrls.pp"/>
+        <UnitName Value="ComCtrls"/>
+        <EditorIndex Value="-1"/>
+        <WindowIndex Value="1"/>
+        <TopLine Value="2873"/>
+        <CursorPos X="5" Y="2892"/>
+        <UsageCount Value="10"/>
+      </Unit27>
     </Units>
-    <JumpHistory Count="30" HistoryIndex="27">
+    <JumpHistory Count="30" HistoryIndex="29">
       <Position1>
         <Filename Value="formprincipal.pas"/>
-        <Caret Line="689" Column="21" TopLine="687"/>
+        <Caret Line="724" TopLine="692"/>
       </Position1>
       <Position2>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="275" TopLine="255"/>
+        <Filename Value="formprincipal.pas"/>
+        <Caret Line="429" Column="40" TopLine="410"/>
       </Position2>
       <Position3>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="162" Column="15" TopLine="145"/>
+        <Filename Value="formprincipal.pas"/>
+        <Caret Line="134" Column="15" TopLine="116"/>
       </Position3>
       <Position4>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="2027" Column="40" TopLine="2025"/>
+        <Filename Value="formnovoprojeto.pas"/>
+        <Caret Line="53" Column="34" TopLine="53"/>
       </Position4>
       <Position5>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="2022" Column="50" TopLine="2020"/>
+        <Filename Value="formprincipal.pas"/>
+        <Caret Line="616" TopLine="595"/>
       </Position5>
       <Position6>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="2024" Column="58" TopLine="2017"/>
+        <Filename Value="C:\tools\lazarus\lcl\include\treeview.inc"/>
+        <Caret Line="520" TopLine="501"/>
       </Position6>
       <Position7>
         <Filename Value="projeto.pas"/>
-        <Caret Line="2027" Column="40" TopLine="2017"/>
+        <Caret Line="1300" TopLine="1282"/>
       </Position7>
       <Position8>
         <Filename Value="projeto.pas"/>
-        <Caret Line="2047" Column="35" TopLine="2027"/>
+        <Caret Line="1486" TopLine="1466"/>
       </Position8>
       <Position9>
         <Filename Value="projeto.pas"/>
-        <Caret Line="562" Column="30" TopLine="543"/>
+        <Caret Line="719" TopLine="701"/>
       </Position9>
       <Position10>
         <Filename Value="projeto.pas"/>
-        <Caret Line="567" Column="111" TopLine="543"/>
+        <Caret Line="1486" TopLine="1466"/>
       </Position10>
       <Position11>
         <Filename Value="projeto.pas"/>
-        <Caret Line="573" Column="32" TopLine="569"/>
+        <Caret Line="719" TopLine="701"/>
       </Position11>
       <Position12>
         <Filename Value="projeto.pas"/>
-        <Caret Line="169" Column="15" TopLine="152"/>
+        <Caret Line="1300" TopLine="1281"/>
       </Position12>
       <Position13>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="110" Column="37" TopLine="90"/>
+        <Filename Value="C:\tools\lazarus\lcl\include\treeview.inc"/>
+        <Caret Line="520" TopLine="501"/>
       </Position13>
       <Position14>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="536" Column="36" TopLine="527"/>
+        <Filename Value="formpropprojeto.pas"/>
+        <Caret Line="54" Column="15" TopLine="42"/>
       </Position14>
       <Position15>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="1419" TopLine="1393"/>
+        <Filename Value="formprincipal.pas"/>
+        <Caret Line="616" TopLine="595"/>
       </Position15>
       <Position16>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="162" Column="23" TopLine="145"/>
+        <Filename Value="formprincipal.pas"/>
+        <Caret Line="141" Column="22" TopLine="116"/>
       </Position16>
       <Position17>
-        <Filename Value="projeto.pas"/>
-        <Caret Line="1968" Column="3" TopLine="1962"/>
+        <Filename Value="formpropprojeto.pas"/>
+        <Caret Line="59" TopLine="49"/>
       </Position17>
       <Position18>
         <Filename Value="projeto.pas"/>
-        <Caret Line="163" Column="23" TopLine="145"/>
+        <Caret Line="719" TopLine="700"/>
       </Position18>
       <Position19>
         <Filename Value="projeto.pas"/>
-        <Caret Line="2068" Column="3" TopLine="2057"/>
+        <Caret Line="1486" TopLine="1466"/>
       </Position19>
       <Position20>
-        <Filename Value="formexportar.pas"/>
-        <Caret Line="179" TopLine="149"/>
+        <Filename Value="projeto.pas"/>
+        <Caret Line="1300" TopLine="1282"/>
       </Position20>
       <Position21>
-        <Filename Value="formexportar.pas"/>
-        <Caret Line="36" Column="15" TopLine="18"/>
+        <Filename Value="projeto.pas"/>
+        <Caret Line="719" TopLine="700"/>
       </Position21>
       <Position22>
-        <Filename Value="formexportar.pas"/>
-        <Caret Line="95" TopLine="74"/>
+        <Filename Value="projeto.pas"/>
+        <Caret Line="1486" TopLine="1466"/>
       </Position22>
       <Position23>
-        <Filename Value="formexportar.pas"/>
-        <Caret Line="36" Column="15" TopLine="18"/>
+        <Filename Value="projeto.pas"/>
+        <Caret Line="719" TopLine="692"/>
       </Position23>
       <Position24>
-        <Filename Value="formexportar.pas"/>
-        <Caret Line="74" Column="15" TopLine="69"/>
+        <Filename Value="projeto.pas"/>
+        <Caret Line="1486" TopLine="1467"/>
       </Position24>
       <Position25>
-        <Filename Value="formexportar.pas"/>
-        <Caret Line="193" TopLine="166"/>
+        <Filename Value="formprincipal.pas"/>
+        <Caret Line="356" TopLine="337"/>
       </Position25>
       <Position26>
         <Filename Value="projeto.pas"/>
-        <Caret Line="2237" Column="3" TopLine="2235"/>
+        <Caret Line="1486" TopLine="1467"/>
       </Position26>
       <Position27>
         <Filename Value="projeto.pas"/>
-        <Caret Line="606" TopLine="601"/>
+        <Caret Line="137" Column="18" TopLine="132"/>
       </Position27>
       <Position28>
         <Filename Value="projeto.pas"/>
-        <Caret Line="2071" Column="166" TopLine="2053"/>
+        <Caret Line="1336" Column="32" TopLine="1315"/>
       </Position28>
       <Position29>
         <Filename Value="projeto.pas"/>
-        <Caret Line="267" TopLine="247"/>
+        <Caret Line="1526" Column="21" TopLine="1485"/>
       </Position29>
       <Position30>
         <Filename Value="projeto.pas"/>
-        <Caret Line="2074" Column="62" TopLine="2056"/>
+        <Caret Line="720" Column="10" TopLine="699"/>
       </Position30>
     </JumpHistory>
   </ProjectOptions>
@@ -599,7 +616,7 @@
         <WatchScope Value="wpsLocal"/>
         <WatchKind Value="wpkWrite"/>
         <Source Value="projeto.pas"/>
-        <Line Value="906"/>
+        <Line Value="905"/>
       </Item2>
       <Item3>
         <Kind Value="bpkSource"/>
